--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,13 +17,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:gravity="center"
-        android:hint="@string/link"
         android:id="@+id/et_url_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="60dp"
         android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:hint="@string/link"
         android:inputType="textUri"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
+        android:background="@drawable/btn_selected"
         android:paddingHorizontal="35dp"
         android:text="@string/submit"
         app:layout_constraintEnd_toEndOf="parent"
